--- a/TODO
+++ b/TODO
@@ -1,4 +1,2 @@
 1. Добавить валидатор json request/response
-2. Загрузка из yml проекты (id, name, token)
-3. Добавить авторизацию (Authorization: Bearer) по токену (см. пункт 2)
-4. конфигурирование сервиса, добавить флаг для конфиг-файла
+2. Добавить авторизацию (Authorization: Bearer) по токену проекта
