--- a/TODO
+++ b/TODO
@@ -1,2 +1,5 @@
 1. Добавить валидатор json request/response
 2. конвертировать строку в число fatal -> 0, error -> 1, etc
+3. Возвращать время события
+4. Строить фингерпринт
+5. Аггрегировать события
